--- a/src/Components/LateralRightSide/LateralRightSide.css
+++ b/src/Components/LateralRightSide/LateralRightSide.css
@@ -1,14 +1,27 @@
 .LateralRightSide {
-	position: absolute;
 	font-size: 0.8rem;
-	right: 0;
-	padding: 1.5em 1em 0 3em;
-	background: #2B2E43;
+	background: var(--darkColor);
 	height: 100vh;
+	display: none;
+	border-top-left-radius: 2em;
+	border-bottom-left-radius: 2em;
+	padding-inline: 0.4em;
+	gap: 0.4em;
+	position: sticky;
+	top: 0;
+}
+.LateralRightSide_Content {
 	display: flex;
-	align-items: center;
 	flex-direction: column;
-	gap: 1.5em;
-	border-top-left-radius: 4.5em;
+	gap: 0.4em;
 	overflow-y: scroll;
+	overflow-x: hidden;
+	margin-block: 2em;
+	border-radius: 1em;
+}
+@media screen and (min-width: 500px) {
+	.LateralRightSide {
+		font-size: 1rem;
+		display: flex;
+	}
 }
