--- a/src/Components/ProspectCardContact/ProspectCardContact.css
+++ b/src/Components/ProspectCardContact/ProspectCardContact.css
@@ -1,5 +1,5 @@
 .ProspectCardContact {
-	background: #464858;
+	background: var(--cardBgColor);
 	inline-size: 6em;
 	min-block-size: 6em;
 	border-radius: 1em;
@@ -20,7 +20,8 @@
 .Head_ProspectCardContact span {
 	color: var(--white);
 	text-transform: uppercase;
-	font-size: 0.75em;
+	font-size: 0.72em;
+	font-weight: bold;
 }
 .ProspectCardContact .fa-brands,
 .ProspectCardContact .fa-solid
@@ -58,7 +59,10 @@
 }
 .Body_ProspectCardContact .name{
 	color: var(--white);
-	font-size: 1.5em;
+	font-size: 100%;
+	line-height: 1em;
+	text-overflow: ellipsis;
+	inline-size: 100%;
 }
 .Body_ProspectCardContact .ago {
 	color: var(--white);
